--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-countup": "^6.5.0",
+    "react-datepicker": "^6.9.0",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.2",
     "react-quill": "^2.0.0",
